its working on fabric, but not neoforge :/